# logbook

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: entries.rs  main.rs
src/controller/: cli_controller.rs  mod.rs
test/: df_with_one_entry.csv  df_with_one_entry_and_unfinished_one.csv  df_with_two_entries.csv  df_with_two_entries_and_unfinished_one.csv
