[package]
name = "digital-logbook"
version = "0.1.0"
edition = "2021"
authors = ["guemax"]
description = "A command-line application for tracking your computer usage times."
readme = "README.md"
license = "GPL-3.0-or-later"

homepage = "https://github.com/digital-logbook/"
repository = "https://github.com/digital-logbook/logbook/"

keywords = ["computer-usage-times", "tracker"]
categories = ["command-line-utilities"]

[[bin]]
name = "logbook"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
